	- Fix race condition for IO based caches like Standard. MMapCache and MemoryCache are not affected. ( Boris Zentner )
	- Slight performance increase - don't make per_dir ap_get_module_config call where we return DECLINED because cfg->GeoIPEnabled is true (Guenter Knauf)
	- NetWare/Win32 compilation fixes, since can't declare vars in middle of code (Guenter Knauf)

1.2.1 Dec 17th 2007
	! Notice, that all directives are _only_ valid in server context. Expect GeoIPEnabled. Check you configuraion with apachectl configtest ( Boris Zentner )
	- Added MMapCache option (Boris Zentner)
	- Change GeoIPEnabled from a serverwide option to a server/directory/location keyword. (Boris Zentner)
	- Fix a small memleak per child. Allocated in geoip_child_init free in geoip_cleanup (Boris Zentner)
	- GeoIP databases get used serverwide now. Not per child. See the README. (Boris Zentner)
	- Update README with more examples (Boris Zentner)
	- Added support for UTF8 output for GeoIP City databases (Boris Zentner)

1.2.0 Aug 30th 2007
	- Fix segfault issue if GeoIP.dat file cannot be opened (Vladimir Sedlacek)
	- Added support for GEOIP_CONTINENT_CODE for GeoIP Country and City (Frank Mather)
	- Added GeoIPScanProxyHeaders directive to handle X-Forwarded-For headers (Frank Mather)
	- Updated documentation to specify that GeoIPFlags need to be passed
	  as second parameter to GeoIPDBFile, instead of using the GeoIPFlags directive

1.1.8 Apr 28th 2006
	- Updated README file with GeoIPFlags docs and performance tips
	- Added apr_strings.h include (Dann Frazier, Fixes Debian #357387)
	- Added support for IndexCache

1.1.7 Aug 1st 2005
	- Copied docs in mod_geoip1.3 in README on how to redirect and block by country
	- Fixed Garbage characters appearing in GeoIP Postal Code field, this
          bug was introduced in 1.1.3

1.1.6 May 17th 2005
	- Fixed empty fields for GeoIP Region fields, this bug
	  was introduced in 1.1.3

1.1.5 Apr 19th 2005